norm and use ft_atoi instead of atoi

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,7 +2,7 @@ NAME = philo
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -pthread -g3 -O3
 
-SRCS = main.c time_helper.c philos_pthread_create.c philo_routine.c philo_print.c
+SRCS = main.c time_helper.c philos_pthread_create.c philo_routine.c philo_print.c get_arg.c
 OBJS = $(SRCS:%.c=%.o)
 
 $(NAME): $(OBJS)
